// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Background gradient render background gradient with custom style 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": undefined,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    style={
      [
        {},
        {
          "experimental_backgroundImage": [
            {
              "colorStops": [
                {
                  "color": "#fff",
                  "positions": [
                    "0%",
                  ],
                },
                {
                  "color": "#000",
                  "positions": [
                    "100%",
                  ],
                },
              ],
              "direction": "0deg",
              "type": "linear-gradient",
            },
          ],
        },
      ]
    }
  >
    <Text>
      Test
    </Text>
  </View>
</View>
`;

exports[`Background gradient render background gradient with one color 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": undefined,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    style={
      [
        {},
        {
          "experimental_backgroundImage": [
            {
              "colorStops": [
                {
                  "color": "#fff",
                  "positions": [
                    "0%",
                  ],
                },
                {
                  "color": "#fff",
                  "positions": [
                    "0%",
                  ],
                },
              ],
              "direction": "0deg",
              "type": "linear-gradient",
            },
          ],
        },
      ]
    }
  >
    <Text>
      Test
    </Text>
  </View>
</View>
`;

exports[`Background gradient render correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": undefined,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    style={
      [
        {},
        {
          "experimental_backgroundImage": [
            {
              "colorStops": [
                {
                  "color": "#fff",
                  "positions": [
                    "0%",
                  ],
                },
                {
                  "color": "#000",
                  "positions": [
                    "100%",
                  ],
                },
              ],
              "direction": "0deg",
              "type": "linear-gradient",
            },
          ],
        },
      ]
    }
  >
    <Text>
      Test
    </Text>
  </View>
</View>
`;

exports[`Background gradient render with undefined angle 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": undefined,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    style={
      [
        {},
        {
          "experimental_backgroundImage": [
            {
              "colorStops": [
                {
                  "color": "#fff",
                  "positions": [
                    "0%",
                  ],
                },
                {
                  "color": "#000",
                  "positions": [
                    "100%",
                  ],
                },
              ],
              "direction": "0deg",
              "type": "linear-gradient",
            },
          ],
        },
      ]
    }
  >
    <Text>
      Test
    </Text>
  </View>
</View>
`;

exports[`Background gradient render with undefined opacity 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": undefined,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    style={
      [
        {},
        {
          "experimental_backgroundImage": [
            {
              "colorStops": [
                {
                  "color": "#fff",
                  "positions": [
                    "0%",
                  ],
                },
                {
                  "color": "#000",
                  "positions": [
                    "100%",
                  ],
                },
              ],
              "direction": "0deg",
              "type": "linear-gradient",
            },
          ],
        },
      ]
    }
  >
    <Text>
      Test
    </Text>
  </View>
</View>
`;
